--- a/src/assets/styles/normalize.scss
+++ b/src/assets/styles/normalize.scss
@@ -1,11 +1,11 @@
 @charset "utf-8";
 
-input,
-textarea {
-    /* webkit的bug */
-    /* https://bugs.webkit.org/show_bug.cgi?id=82692 */
-    user-select: auto !important;
-}
+// input,
+// textarea {
+//     /* webkit的bug */
+//     /* https://bugs.webkit.org/show_bug.cgi?id=82692 */
+//     user-select: auto !important;
+// }
 html {
     background-color: #fff;
     color: #000;
@@ -179,13 +179,13 @@ sub {
 html {
     overflow-x: hidden;
     height: 100%;
-    font-size: 50px;
+    // font-size: 50px;
     -webkit-tap-highlight-color: transparent;
 }
 body {
     font-family: Arial, 'Microsoft Yahei', 'Helvetica Neue', Helvetica, sans-serif;
     color: #333;
-    font-size: 0.28em;
+    // font-size: 0.28em;
     line-height: 1;
     -webkit-text-size-adjust: none;
 }
